@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+6/25/17: Fix output of a pcm file for other Records when aligning whole tilt
+series in IMOD, and two other issues when frame-saving is automatically
+imposed with aligning in IMOD.
+
 6/15/17: Added property to set the maximum beam radius allowed when centering
 beam with low dose tracking images in tilt series (In 3.6).
 
